A bunch of twtweaks recommended by upstream.

--- a/examples/add/README
+++ b/examples/add/README
@@ -1,15 +1,11 @@
 
 This is a simple add service that happens over a TLS connection.
 
-To generate code from the protobuf file:
-cd addservice
-protoc --go_out=. addservice.proto 
+To run the server:
+go run add-server.go
 
-To compile the server:
-go build add.go
-
-To compile the client:
-go build client.go
+To run the client:
+go run add-client.go
 
 To make test certificates:
 ./makecert.sh AnyFakeOrRealEmail@foo.com
